feat: Add InputStream-based Spec loaders for classpath specs
Spec.fromPath required a filesystem Path, which is awkward for callers
loading the spec from the classpath via getResourceAsStream and outright
broken when the resource lives inside a JAR.

Add four new entry points:

- Spec.fromJson(InputStream)                       — Gson (reflective)
- Spec.fromJson(InputStream, Function<byte[],Map>) — BYO parser (Jackson, ...)
- Spec.fromYaml(InputStream)                       — SnakeYAML (reflective)
- Spec.fromYaml(InputStream, Function<byte[],Map>) — BYO parser

All four consume and close the stream, NPE on null args, and surface IO
failures as UncheckedIOException. fromPath now shares the same byte-based
internal parsers.

Also ignore .claude/worktrees/ so local agent worktrees don't pollute
git status.